[mobile] Fix (hopefully) appbar height on iOS

--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -65,6 +65,7 @@
 @mixin menu-app () {
   top: initial;
   bottom: 0;
+  height: 5.25rem;
   padding: 1rem 2rem;
 
   border: none;
